--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1 id="header">SWE101! 🚀</h1>
     <!-- Import program logic -->
-    <script src="script.js"></script>
+    <script src="globals.js"></script>
+    <script src="gameplay.js"></script>
   </body>
 </html>
