added get results button, both players can draw multiple cards that will display in a row, logic for high/lowcard still missing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <body>
     <h1 id="header">SWE101! 🚀</h1>
 
+    <div class="playerContainer" id="player1Container">
+      <h2>Player 1 Cards</h2>
+    </div>
+
+    <div class="playerContainer" id="player2Container">
+      <h2>Player 2 Cards</h2>
+    </div>
+
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
