--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <body>
     <h1 id="header">SWE101! 🚀</h1>
     <!-- Import program logic -->
+    <!-- Hard Code Start -->
+    <div class="card-container">
+      <div class="card">
+        <div class="name red">3</div>
+        <div class="suit red">♥️</div>
+      </div>
+      <div class="card">
+        <div class="name red">4</div>
+        <div class="suit red">♥️</div>
+      </div>
+    </div>
+
+    <!-- Hard Code End-->
+    <br />
     <script src="script.js"></script>
   </body>
 </html>
