--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
   <head>
     <title>SWE101</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
   </head>
 
   <body>
-    <h1 id="header">SWE101! 🚀</h1>
-    <!-- Import program logic -->
+    <h1 id="header">DOM HIGH CARD 🚀</h1>
+
+    <!-- HARDCODED HTML
+    <div class="card-container">
+      <div class="card">
+        <div class="name red">3</div>
+        <div class="suit">♥️</div>
+      </div>
+      <div class="card">
+        <div class="name red">4</div>
+        <div class="suit">♥️</div>
+      </div>
+    </div> -->
+
     <script src="script.js"></script>
   </body>
 </html>
