--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SWE101</title>
+    <title>High Card DOM!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1 id="header">SWE101! 🚀</h1>
+    <h1 id="header">High Card DOM! 🚀</h1>
     <!-- Import program logic -->
-    <!-- Hard Code Start -->
-    <div class="card-container">
-      <div class="card">
-        <div class="name red">3</div>
-        <div class="suit red">♥️</div>
-      </div>
-      <div class="card">
-        <div class="name red">4</div>
-        <div class="suit red">♥️</div>
-      </div>
-    </div>
-
-    <!-- Hard Code End-->
-    <br />
     <script src="script.js"></script>
   </body>
 </html>
