--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
   <body>
     <h1 id="header">High Card DOM! 🚀</h1>
+    <!--
+    <div>
+      <table style="width: 100%">
+        <tr>
+          <td>hello</td>
+          <td>world</td>
+        </tr>
+      </table>
+    </div>
+    -->
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
