--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <h1 id="header">SWE101! 🚀</h1>
     <!-- Import program logic -->
     <script src="script.js"></script>
+    <!-- <div class="card-container">
+      <div class="card">
+        <div class="name red">3</div>
+        <div class="suit">♥️</div>
+      </div>
+    </div> -->
   </body>
 </html>
