--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <script src="script.js"></script>
 
     <!-- card visuals -->
-    <div class="card-container">
-      <div class="card">
+    <!-- <div class="card-container"> -->
+      <!-- <div class="card">
         <div class="name red">3</div>
         <div class="suit">♥️</div>
       </div>
       <div class="card">
         <div class="name red">4</div>
         <div class="suit">♥️</div>
-      </div>
-    </div>
+      </div> -->
+    <!-- </div> -->
 
   </body>
 </html>
