--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SWE101</title>
+    <title>High Card</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
-    <h1 id="header">SWE101! 🚀</h1>
+  <body style="background-color: black">
+    <h1 id="header" style="text-align: center; color: white">♠ High Card ♠</h1>
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
