--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SWE101</title>
+    <title>High Card</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1 id="header">SWE101! 🚀</h1>
+    <h1 id="header">High Card</h1>
     <!-- Import program logic -->
     <script src="script.js"></script>
+    <!-- <div class="card-container">
+      <div class="card">
+        <div class="name red">3</div>
+        <div class="suit">♥️</div>
+      </div>
+      <div class="card">
+        <div class="name red">4</div>
+        <div class="suit">♥️</div>
+      </div>
+    </div> -->
   </body>
 </html>
