--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body style="background-color: black">
-    <h1 id="header" style="text-align: center; color: white">♠ High Card ♠</h1>
+    <h1 id="header" style="text-align: left; color: white">♠ High Card ♠</h1>
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
