--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SWE101</title>
+    <title>High Card</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1 id="header">SWE101! 🚀</h1>
+    <h1 id="header">High Card Game</h1>
     <!-- Import program logic -->
-    <script src="script.js"></script>
+    <script type= "module" src="script.js"></script>
+    <script type="module" src="deck.js"></script>
+
   </body>
 </html>
