--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1 id="header">SWE101! 🚀</h1>
-    <div class="card-container">
+    <!-- <div class="card-container">
       <div class="card">
         <div class="name red">3</div>
         <div class="suit">♥️</div>
@@ -16,7 +16,7 @@
         <div class="name red">4</div>
         <div class="suit">♥️</div>
       </div>
-    </div>
+    </div> -->
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
