added function to calc difference in highest and lowest cards within a hand

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <body>
     <h1 id="header">SWE101! 🚀</h1>
+    <h2>Click deal when you have 2 or more cards! :D</h2>
     <!-- <div class="card-container">
       <div class="card">
         <div class="name red">3</div>
