--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body style="background-color: black">
-    <h1 id="header" style="text-align: left; color: white">♠ High Card ♠</h1>
+  <body style="background-color: rgba(14, 194, 155, 0.705)">
+    <h1 id="header" style="text-align: left; color: rgb(0, 0, 0)">
+      ♠ High Card ♠
+    </h1>
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
