working high card game

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>SWE101</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+<html lang="en">
+	<head>
+		<title>Liz's High Card Game</title>
+		<meta charset="utf-8" />
+		<link rel="stylesheet" href="styles.css" />
+	</head>
 
-  <body>
-    <h1 id="header">SWE101! 🚀</h1>
-    <!-- Import program logic -->
-    <script src="script.js"></script>
-  </body>
+	<body>
+		<h1 id="header">Liz's High Card Game</h1>
+		<!-- Import program logic -->
+		<script src="script.js"></script>
+	</body>
 </html>
