--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SWE101</title>
+    <title>High Card Game</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
-    <h1 id="header">SWE101! 🚀</h1>
+    <div class="header">
+      <h1 id="header">HIGH CARD</h1>
+    </div>
+    <div class="container">
+      <div class="output">
+        <h2 class="Game-Rules">Game Rules</h2>
+        <div class="results">
+          Click the <span><button>Play</button></span>to start playing the game.
+          <br />Both players should hit the respective button to see their
+          cards. <br />Whoever has a higher value wins the game!
+        </div>
+      </div>
+    </div>
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
