--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SWE101</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <title>SWE101</title>
   </head>
 
   <body>
-    <h1 id="header">🃏HIGH CARD GAME!🃏</h1>
+    <h1 id="header">HIGH CARD GAME!</h1>
     <!-- <div class="card">
       <div class="name red">3</div>
       <div class="suit">♥️</div>
