added text input for number of cards drawn

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <body>
     <h1 id="header">HIGH CARD GAME 🚀</h1>
+    <input type="text" id="text_id" placeholder="Input no. of cards to draw" />
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
