--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1 id="header">SWE101! 🚀</h1>
     <!-- Import program logic -->
-    <script src="script.js"></script>
+    <script src="newScript.js"></script>
+
+    <div id="container" class="container"></div>
   </body>
 </html>
